fixed second header spacing bug

--- a/brookes-boarding/src/Components/Header/Header.css
+++ b/brookes-boarding/src/Components/Header/Header.css
@@ -59,4 +59,6 @@
 
 .container {
   background: red;
+  max-width: 0px;
+  padding-left: 0%;
 }
